# x

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  compile_shaders.bat
Components/: AxesComponent.h  ChildComponent.h  FollowComponent.h  MeshComponent.h  NetworkComponent.h  ParentComponent.h  PhysicsComponent.h  QueuedComponent.h  SkeletalMeshComponent.h  TargetComponent.h  TransformComponent.h
Navigation/: Navigation.cpp  Navigation.h
Net/: NetCompId.h  NetMessage.h  NetMsgType.h
Scenes/: MainScene.cpp  MainScene.h  TestScene.cpp  TestScene.h
Server/: CMakeLists.txt  SEngine.cpp  SEngine.h  SGame.cpp  SGame.h  SMainScene.cpp  SMainScene.h  SNetEntityManager.cpp  SNetEntityManager.h  SNetworkDriver.cpp  SNetworkDriver.h  main.cpp
assets/: save.txt
assets/models/: CharacterRunning.fbx  Lucha.fbx  Stones.fbx  ball.fbx  block.fbx  cube.fbx  map.mtl  ninja.fbx
assets/shaders/: shader.frag  skeletal.vert  skeletalVert.spv  vert.spv
base/: CMakeLists.txt  defines.h
core/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  MeshModel.cpp  MeshModel.h  Scene.cpp  Scene.h  SkeletalMesh.cpp  SkeletalMesh.h  mesh.cpp  mesh.h
engine/: CMakeLists.txt  NetworkDriver.cpp  NetworkDriver.h  engine.cpp  engine.h  main.cpp  renderer.cpp  renderer.h  renderutil.cpp  renderutil.h  rutil.h  window.cpp  window.h
engine/Components/: ChildComponent.h  FollowComponent.h  QueuedComponent.h  SkeletalMeshComponent.h  TargetComponent.h
engine/Core/: Camera.cpp  Camera.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  MeshModel.cpp  Scene.cpp  Scene.h  SkeletalMesh.cpp  SkeletalMesh.h  Window.cpp  Window.h  defines.h
engine/Navigation/: Navigation.cpp  Navigation.h
engine/Network/: NetMessage.h  NetMsgType.h  NetworkDriver.cpp  NetworkDriver.h
engine/Renderer/: Renderer.cpp  Renderer.h  RendererUtil.cpp  RendererUtil.h
engine/Renderer/base/: RendererDevice.cpp  RendererDevice.h  RendererInstance.cpp  RendererInstance.h  SwapChain.cpp  SwapChain.h
engine/UI/: RmlRenderInterface.h  RmlSystemInterface.h
engine/Util/: Color.h  File.cpp  File.h  Primitives.h  Util.cpp  Util.h
models/: untitled.mtl
shaders/: frag.spv  shader.frag  shader.vert  skeletalFrag.spv  vert.spv
src/: CMakeLists.txt  main.cpp
src/Components/: AxesComponent.h  FollowComponent.h  MeshComponent.h  NetworkComponent.h  ParentComponent.h  PhysicsComponent.h  QueuedComponent.h  SkeletalMeshComponent.h  TargetComponent.h  TransformComponent.h
src/Core/: Camera.cpp  Game.cpp  Game.h  Mesh.h  MeshModel.cpp  MeshModel.h  Scene.cpp  Scene.h  SkeletalMesh.cpp  SkeletalMesh.h
src/Engine/: Window.h  engine.cpp  engine.h  main.cpp
src/Engine/Renderer/: Renderer.cpp  Renderer.h  RendererUtil.h
src/Engine/Renderer/base/: RendererDevice.cpp  RendererDevice.h  RendererInstance.cpp  RendererInstance.h
src/Enums/: SceneId.h
src/Navigation/: Navigation.cpp  Navigation.h
src/Net/: NetMessage.h  NetMsgType.h
src/Network/: NetMessage.h  NetworkDriver.h
src/Scenes/: MainScene.cpp  MainScene.h  TestScene.cpp  TestScene.h
src/UI/: HotbarSlots.h
src/Util/: Primitives.h  Util.cpp  Util.h
src/core/: Camera.cpp  Camera.h  Game.cpp  Game.h  MeshModel.cpp  MeshModel.h  Scene.cpp  Scene.h  SkeletalMesh.cpp  SkeletalMesh.h  mesh.cpp  mesh.h
src/engine/: NetworkDriver.cpp  NetworkDriver.h  engine.cpp  engine.h  main.cpp  renderer.cpp  renderer.h  rutil.h  window.cpp  window.h
src/engine/Components/: AxesComponent.h  MeshComponent.h  NetworkComponent.h  ParentComponent.h  PhysicsComponent.h  TransformComponent.h
src/engine/Core/: Game.cpp  Game.h  Mesh.cpp  Mesh.h  MeshModel.h  Scene.cpp  Scene.h  SkeletalMesh.h  Window.cpp  Window.h
src/engine/Navigation/: Navigation.cpp  Navigation.h
src/engine/Network/: NetCompId.h  NetworkDriver.cpp  NetworkDriver.h
src/engine/Renderer/base/: SwapChain.cpp  SwapChain.h
src/engine/Util/: File.h  Primitives.h  Util.h
src/engine/renderer/: renderer.cpp  renderer.h
src/engine/renderer/base/: rendererDevice.cpp  rendererDevice.h  rendererInstance.cpp  rendererInstance.h
src/game/: SceneId.h  main.cpp
src/game/Scenes/: MainScene.cpp  MainScene.h  TestScene.h
src/util/: Util.cpp  Util.h  color.h  file.cpp  file.h  primitives.h
util/: CMakeLists.txt  Util.cpp  Util.h  color.h  file.cpp  file.h  primitives.h
