CMAKE_MINIMUM_REQUIRED(VERSION 3.26)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
PROJECT(x)

IF (WIN32)
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
    SET(BUILD_SHARED_LIBS ON)
    SET(RAULS_BUILD 1)
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
ELSE()
    SET(BUILD_SHARED_LIBS OFF)
    SET(CMAKE_GENERATOR "Unix Makefiles" CACHE INTERNAL "CMake generator" FORCE)
ENDIF(WIN32)

ADD_SUBDIRECTORY(vendor)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(src)